# MetaMesh

./: CMakeLists.txt  MeshWorksDataBoard.cpp  MeshWorksDataBoard.h  PMBody.cpp  PMBody.h  README.md  main.cpp
GLKLib/: GLK.cpp  GLKObList.h
LatticeTri/include/: LatticeTri.h  core.h  cudaBeamTri.cuh  fileOperate.h  pch.h
LatticeTri/src/: LatticeTri.cpp  cudaBeamTri.cu
PQPLib/: OBB_Disjoint.h
QMeshLib/: Lattice.cpp  Lattice.h  OpenMesh.cpp  OpenMesh.h  QSurfaceMesh.cpp  QSurfaceMesh.h
QMeshLib/QMesh/: QMeshEdge.cpp  QMeshEdge.h  QMeshFace.cpp  QMeshFace.h  QMeshNode.cpp  QMeshNode.h  QMeshPatch.cpp  QMeshPatch.h
Utils/MarchingSquare/: MarchingSquareBin.cpp  MarchingSquareBin.h  VSA.cpp  VSA.h
data/bone/: bone.edge  bone.node
data/bunny/: bunny.node
data/cone/: cone.edge  cone.node
